# AmeliaInference

./: .gitignore  INSTALL.md  README.md  pyproject.toml  run_inference.py  setup.py  standalone.py  test_bed.py
amelia_inference/: get_map_background.py  plot_csv.py  standalone.py
amelia_inference/utils/: common.py  config_utils.py  data_utils.py  metrics.py
configs/: default.yaml
configs/data/: default.yaml
configs/device/: default.yaml  gpu.yaml
configs/hydra/: default.yaml
configs/model/: amelia_marginal.yaml
configs/paths/: default.yaml
configs/tests/: default.yaml  example.yaml  example_kbos_critical.yaml  example_kbos_random.yaml  kbos_critical.yaml  kbos_random.yaml  kdca_critical.yaml  kdca_random.yaml  kewr_critical.yaml  kewr_random.yaml  kjfk_critical.yaml  kjfk_random.yaml  klax_critical.yaml  klax_random.yaml  kmdw_critical.yaml  kmdw_random.yaml  kmsy_critical.yaml  kmsy_random.yaml  ksea_critical.yaml  ksea_random.yaml  ksfo_critical.yaml  ksfo_random.yaml  panc_critical.yaml  panc_random.yaml
datasets/: amelia
utils/: common.py  config_utils.py  data_utils.py
