[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amelia_inference"
version = "1.0.0"
description = "Tool running amelia's framework."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9, <4.0"
dependencies = [
    'python-dateutil==2.9.0',
    'numpy==1.21.2',
    'matplotlib==3.7.1',
    'imageio==2.34.0',
    'torch==2.4.0',
    'tqdm==4.65.0',
    'hydra-core==1.3.2',
    'hydra_colorlog==1.2.0',
    'contextily==1.3.0',
    'easydict==1.10',
    'opencv-python==4.7.0.72',

]

authors = [
    {name = "Ingrid Navarro"},
    {name = "Pablo Ortega"},
    {name = "Jay Patrikar"},
    {name = "Haichuan Wang"},
    {name = "Jong Hoon Park"},
]

[project.optional-dependencies]
amelia_tf = [
    'amelia_tf @ git+https://github.com/AmeliaCMU/AmeliaTF.git@main',
]

[tool.setuptools]
packages = ["amelia_inference", "amelia_inference.utils"]

[project.urls]
Repository = "https://github.com/AmeliaCMU/AmeliaInference"
Homepage = "https://ameliacmu.github.io"